Added google-signin-client_id for WEB

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="chatty">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <!--  MARTIN ADDED-->
+  <meta name="google-signin-client_id" content="453459214094-ct0ek8pu5i0takm7m2kkibaq27f6kn7j.apps.googleusercontent.com">
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
